Ipad pro alignment issues

--- a/stylesheets/pages/subscription.less
+++ b/stylesheets/pages/subscription.less
@@ -1562,8 +1562,8 @@
 											    			height: 25px;
     														width: 25px;
     														&:after{
-															    left: 10px;
-															    top: 1px;
+															    left: 8px;
+															    top: -4px;
 															    width: 10px;
 															    height: 20px;
 															    border: solid white;
@@ -1724,8 +1724,8 @@
 										    			height: 25px;
 														width: 25px;
 														&:after{
-														    left: 10px;
-														    top: 1px;
+														    left: 8px;
+														    top: -4px;
 														    width: 10px;
 														    height: 20px;
 														    border: solid white;
@@ -1834,7 +1834,8 @@
                                     position: relative;
                                     margin-bottom: 15px;
                                     span{
-                                        display: block;
+										display: block;
+										margin-left: 1%;
                                         label{
                                             font-size: 16px;
                                             font-weight: bold;
@@ -1919,7 +1920,7 @@
                                         }
                                         label.mz-small{
                                             position: absolute;
-                                            right: 59px;
+                                            right: 80px;
     										top: 7px;
                                         }
                                     }
@@ -1979,7 +1980,8 @@
                                         width: 49%;
                                     }
                                     &.howling{
-                                        width: 49%;
+										width: 49%;
+										margin-left: 1%;
                                     }
                                 }
                             }
